{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 57,
  "lineage": "4a03220e-347c-200b-2546-1fccb487cfb6",
  "resources": [
    {
      "module": "module.vpc1",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-015be5c5bc1be8f55",
            "association_id": "eipassoc-01276a164749d352a",
            "domain": "vpc",
            "id": "eipalloc-015be5c5bc1be8f55",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-08d9f37771c288ada",
            "private_dns": "ip-10-11-101-141.eu-west-1.compute.internal",
            "private_ip": "10.11.101.141",
            "public_dns": "ec2-18-202-202-72.eu-west-1.compute.amazonaws.com",
            "public_ip": "18.202.202.72",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "infrastructure-eu-west-1a"
            },
            "tags_all": {
              "Name": "infrastructure-eu-west-1a"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc1",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:114015432723:internet-gateway/igw-0d397629d8457856c",
            "id": "igw-0d397629d8457856c",
            "owner_id": "114015432723",
            "tags": {
              "Name": "infrastructure"
            },
            "tags_all": {
              "Name": "infrastructure"
            },
            "vpc_id": "vpc-03e18202b94e0b81b"
          },
          "dependencies": [
            "module.vpc1.aws_vpc.this",
            "module.vpc1.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-015be5c5bc1be8f55",
            "connectivity_type": "public",
            "id": "nat-05c171b9b6047b40e",
            "network_interface_id": "eni-08d9f37771c288ada",
            "private_ip": "10.11.101.141",
            "public_ip": "18.202.202.72",
            "subnet_id": "subnet-04811fd133dac94b9",
            "tags": {
              "Name": "infrastructure-eu-west-1a"
            },
            "tags_all": {
              "Name": "infrastructure-eu-west-1a"
            }
          },
          "dependencies": [
            "module.vpc1.aws_eip.nat",
            "module.vpc1.aws_internet_gateway.this",
            "module.vpc1.aws_subnet.public",
            "module.vpc1.aws_vpc.this",
            "module.vpc1.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-012d6c5b3e89d827e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-05c171b9b6047b40e",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-012d6c5b3e89d827e",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc1.aws_eip.nat",
            "module.vpc1.aws_internet_gateway.this",
            "module.vpc1.aws_nat_gateway.this",
            "module.vpc1.aws_route_table.private",
            "module.vpc1.aws_subnet.public",
            "module.vpc1.aws_vpc.this",
            "module.vpc1.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0d397629d8457856c",
            "id": "r-rtb-0ef6aebefd64814ad1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ef6aebefd64814ad",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc1.aws_internet_gateway.this",
            "module.vpc1.aws_route_table.public",
            "module.vpc1.aws_vpc.this",
            "module.vpc1.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:114015432723:route-table/rtb-012d6c5b3e89d827e",
            "id": "rtb-012d6c5b3e89d827e",
            "owner_id": "114015432723",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05c171b9b6047b40e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "infrastructure-private"
            },
            "tags_all": {
              "Name": "infrastructure-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-03e18202b94e0b81b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc1.aws_vpc.this",
            "module.vpc1.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:114015432723:route-table/rtb-0ef6aebefd64814ad",
            "id": "rtb-0ef6aebefd64814ad",
            "owner_id": "114015432723",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d397629d8457856c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "infrastructure-public"
            },
            "tags_all": {
              "Name": "infrastructure-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-03e18202b94e0b81b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc1.aws_vpc.this",
            "module.vpc1.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04770a69dff0f10ec",
            "route_table_id": "rtb-012d6c5b3e89d827e",
            "subnet_id": "subnet-035c867f1bf33eb6b"
          },
          "dependencies": [
            "module.vpc1.aws_route_table.private",
            "module.vpc1.aws_subnet.private",
            "module.vpc1.aws_vpc.this",
            "module.vpc1.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06334f34bb065360b",
            "route_table_id": "rtb-012d6c5b3e89d827e",
            "subnet_id": "subnet-02621fda4c86dda6c"
          },
          "dependencies": [
            "module.vpc1.aws_route_table.private",
            "module.vpc1.aws_subnet.private",
            "module.vpc1.aws_vpc.this",
            "module.vpc1.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-048a2a455b7191fba",
            "route_table_id": "rtb-012d6c5b3e89d827e",
            "subnet_id": "subnet-08f338e570de9ad84"
          },
          "dependencies": [
            "module.vpc1.aws_route_table.private",
            "module.vpc1.aws_subnet.private",
            "module.vpc1.aws_vpc.this",
            "module.vpc1.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0919625310810727e",
            "route_table_id": "rtb-0ef6aebefd64814ad",
            "subnet_id": "subnet-04811fd133dac94b9"
          },
          "dependencies": [
            "module.vpc1.aws_route_table.public",
            "module.vpc1.aws_subnet.public",
            "module.vpc1.aws_vpc.this",
            "module.vpc1.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-014845c95ddf75dde",
            "route_table_id": "rtb-0ef6aebefd64814ad",
            "subnet_id": "subnet-0092efc346a66684d"
          },
          "dependencies": [
            "module.vpc1.aws_route_table.public",
            "module.vpc1.aws_subnet.public",
            "module.vpc1.aws_vpc.this",
            "module.vpc1.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0914b8ec3d5905fb2",
            "route_table_id": "rtb-0ef6aebefd64814ad",
            "subnet_id": "subnet-011fb6c246b6b78f3"
          },
          "dependencies": [
            "module.vpc1.aws_route_table.public",
            "module.vpc1.aws_subnet.public",
            "module.vpc1.aws_vpc.this",
            "module.vpc1.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:114015432723:subnet/subnet-035c867f1bf33eb6b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.11.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-035c867f1bf33eb6b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "114015432723",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "infrastructure-private-eu-west-1a"
            },
            "tags_all": {
              "Name": "infrastructure-private-eu-west-1a"
            },
            "vpc_id": "vpc-03e18202b94e0b81b"
          },
          "dependencies": [
            "module.vpc1.aws_vpc.this",
            "module.vpc1.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:114015432723:subnet/subnet-02621fda4c86dda6c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.11.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02621fda4c86dda6c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "114015432723",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "infrastructure-private-eu-west-1b"
            },
            "tags_all": {
              "Name": "infrastructure-private-eu-west-1b"
            },
            "vpc_id": "vpc-03e18202b94e0b81b"
          },
          "dependencies": [
            "module.vpc1.aws_vpc.this",
            "module.vpc1.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:114015432723:subnet/subnet-08f338e570de9ad84",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.11.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08f338e570de9ad84",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "114015432723",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "infrastructure-private-eu-west-1c"
            },
            "tags_all": {
              "Name": "infrastructure-private-eu-west-1c"
            },
            "vpc_id": "vpc-03e18202b94e0b81b"
          },
          "dependencies": [
            "module.vpc1.aws_vpc.this",
            "module.vpc1.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:114015432723:subnet/subnet-04811fd133dac94b9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.11.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04811fd133dac94b9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "114015432723",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "infrastructure-public-eu-west-1a"
            },
            "tags_all": {
              "Name": "infrastructure-public-eu-west-1a"
            },
            "vpc_id": "vpc-03e18202b94e0b81b"
          },
          "dependencies": [
            "module.vpc1.aws_vpc.this",
            "module.vpc1.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:114015432723:subnet/subnet-0092efc346a66684d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.11.102.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0092efc346a66684d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "114015432723",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "infrastructure-public-eu-west-1b"
            },
            "tags_all": {
              "Name": "infrastructure-public-eu-west-1b"
            },
            "vpc_id": "vpc-03e18202b94e0b81b"
          },
          "dependencies": [
            "module.vpc1.aws_vpc.this",
            "module.vpc1.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:114015432723:subnet/subnet-011fb6c246b6b78f3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.11.103.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-011fb6c246b6b78f3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "114015432723",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "infrastructure-public-eu-west-1c"
            },
            "tags_all": {
              "Name": "infrastructure-public-eu-west-1c"
            },
            "vpc_id": "vpc-03e18202b94e0b81b"
          },
          "dependencies": [
            "module.vpc1.aws_vpc.this",
            "module.vpc1.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:114015432723:vpc/vpc-03e18202b94e0b81b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.11.0.0/16",
            "default_network_acl_id": "acl-090ed2a48b3c242b5",
            "default_route_table_id": "rtb-0f598b7df2acb58db",
            "default_security_group_id": "sg-05d3dd2d7e4ae441b",
            "dhcp_options_id": "dopt-0cdc540bcff0df1f9",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-03e18202b94e0b81b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f598b7df2acb58db",
            "owner_id": "114015432723",
            "tags": {
              "Name": "infrastructure"
            },
            "tags_all": {
              "Name": "infrastructure"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc2",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c36297edfbfc4c72",
            "domain": "vpc",
            "id": "eipalloc-0c36297edfbfc4c72",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-54-73-20-109.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.73.20.109",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "infrastructure-us-west-2a"
            },
            "tags_all": {
              "Name": "infrastructure-us-west-2a"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc2",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:114015432723:internet-gateway/igw-000ff446193c44355",
            "id": "igw-000ff446193c44355",
            "owner_id": "114015432723",
            "tags": {
              "Name": "infrastructure"
            },
            "tags_all": {
              "Name": "infrastructure"
            },
            "vpc_id": "vpc-0d7d8efa8638b8b2d"
          },
          "dependencies": [
            "module.vpc2.aws_vpc.this",
            "module.vpc2.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc2",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc2",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc2",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-000ff446193c44355",
            "id": "r-rtb-04658082f8a7444581080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04658082f8a744458",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc2.aws_internet_gateway.this",
            "module.vpc2.aws_route_table.public",
            "module.vpc2.aws_vpc.this",
            "module.vpc2.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc2",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:114015432723:route-table/rtb-052f877ff6c383e6f",
            "id": "rtb-052f877ff6c383e6f",
            "owner_id": "114015432723",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "infrastructure-private"
            },
            "tags_all": {
              "Name": "infrastructure-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d7d8efa8638b8b2d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc2.aws_vpc.this",
            "module.vpc2.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc2",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:114015432723:route-table/rtb-04658082f8a744458",
            "id": "rtb-04658082f8a744458",
            "owner_id": "114015432723",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-000ff446193c44355",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "infrastructure-public"
            },
            "tags_all": {
              "Name": "infrastructure-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d7d8efa8638b8b2d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc2.aws_vpc.this",
            "module.vpc2.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc2",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc2",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc2",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:114015432723:vpc/vpc-0d7d8efa8638b8b2d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.12.0.0/16",
            "default_network_acl_id": "acl-0679a58de0074047c",
            "default_route_table_id": "rtb-0e8bdbd22a5c058e3",
            "default_security_group_id": "sg-0014688cbc0f6281d",
            "dhcp_options_id": "dopt-0474cf021f4c562b6",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0d7d8efa8638b8b2d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e8bdbd22a5c058e3",
            "owner_id": "114015432723",
            "tags": {
              "Name": "infrastructure"
            },
            "tags_all": {
              "Name": "infrastructure"
            }
          }
        }
      ]
    }
  ]
}